KAS-4486: MandateeSelectorPanel and GovernmentAreasPanel when saveCase is running + added loader in these 2 components

--- a/app/components/cases/government-areas-panel.hbs
+++ b/app/components/cases/government-areas-panel.hbs
@@ -11,33 +11,40 @@
             </Toolbar.Group>
           </Auk::Toolbar>
         </Auk::Panel::Header>
-        <Auk::Panel::Body class="au-c-panel-grid">
-          {{#each this.domainSelections as |domainSelection|}}
-          <AuCheckboxGroup class="au-c-control-group--grid">
-            <AuCheckboxGroup class="auk-u-maximize-width"> 
-              <AuCheckbox
-                @checked={{domainSelection.isSelected}}
-                @onChange={{fn this.toggleDomainSelection domainSelection}}
-              >
-                <span class="au-u-medium">{{domainSelection.domain.label}}</span>
-              </AuCheckbox>
-              <AuCheckboxGroup
-                @selected={{domainSelection.selectedFields}}
-                @onChange={{this.toggleItem}}
-                
-                as |Group|
-              >
-                {{#each domainSelection.availableFields as |field|}}
-                  <Group.Checkbox
-                    @value={{field}}
-                    @onChange={{fn this.toggleFieldSelection field}}
-                  >
-                    {{field.label}}
-                  </Group.Checkbox>
-                {{/each}}
+        <Utils::LoadableContent
+              @isLoading={{this.areLoadingTasksRunning}}
+              @reserveSpace={{true}}
+        >
+          <Auk::Panel::Body class="au-c-panel-grid">
+            {{#each this.domainSelections as |domainSelection|}}
+            <AuCheckboxGroup class="au-c-control-group--grid">
+              <AuCheckboxGroup class="auk-u-maximize-width"
+              > 
+                <AuCheckbox
+                  @checked={{domainSelection.isSelected}}
+                  @onChange={{fn this.toggleDomainSelection domainSelection}}
+                  @disabled={{@disabled}}
+                >
+                  <span class="au-u-medium">{{domainSelection.domain.label}}</span>
+                </AuCheckbox>
+                <AuCheckboxGroup
+                  @selected={{domainSelection.selectedFields}}
+                  @onChange={{this.toggleItem}}
+                  @disabled={{@disabled}}
+                  as |Group|
+                >
+                  {{#each domainSelection.availableFields as |field|}}
+                    <Group.Checkbox
+                      @value={{field}}
+                      @onChange={{fn this.toggleFieldSelection field}}
+                    >
+                      {{field.label}}
+                    </Group.Checkbox>
+                  {{/each}}
+                </AuCheckboxGroup>
               </AuCheckboxGroup>
             </AuCheckboxGroup>
-          </AuCheckboxGroup>
-          {{/each}}
-        </Auk::Panel::Body>
+            {{/each}}
+          </Auk::Panel::Body>
+        </Utils::LoadableContent>
       </Auk::Panel>
