--- a/app/components/cases/mandatee-selector-panel.hbs
+++ b/app/components/cases/mandatee-selector-panel.hbs
@@ -12,34 +12,41 @@
           </Auk::Toolbar>
         </Auk::Panel::Header>
         <Auk::Panel::Body>
-          <Auk::CheckboxTree
-            @label='Alle ministers'
-            @items={{this.currentMinisters}}
-            @itemStructure={{hash label="fullName"}}
-            @selectedItems={{this.selectedCurrentMinisters}}
-            @didUpdate={{this.onChangeSelectedMinisters}}
-            @layout="grid"
-          />
-          {{#if this.selectedCurrentMinisters}}
-          <AuHr/>
-          {{/if}}
-          <AuList
-            @divider={{true}}
-            as |Item|
-          >
-            {{#each this.selectedCurrentMinisters as |minister index|}}
-              <Item class="au-u-flex au-u-flex--vertical-center au-u-flex--between">
-                <strong>{{minister.fullName}}</strong>
-                <div class="au-u-flex au-u-flex--vertical-center au-u-flex--spaced-tiny">
-                  <AuRadio 
-                    @name="submitter" 
-                    @checked={{await (this.checkIfSubmitter minister)}} 
-                    {{on "click" (fn this.onChangeSubmitter minister)}}
-                  />
-                  <Auk::Label class="au-u-padding-bottom-none">{{t "submitter"}}</Auk::Label>
-                </div>
-              </Item>
-            {{/each}}
-          </AuList>
+          <Utils::LoadableContent
+              @isLoading={{this.prepareCurrentMinisters.isRunning}}
+              @reserveSpace={{true}}
+            >
+              <Auk::CheckboxTree
+              @label='Alle ministers'
+              @items={{this.currentMinisters}}
+              @itemStructure={{hash label="fullName"}}
+              @selectedItems={{this.selectedCurrentMinisters}}
+              @didUpdate={{this.onChangeSelectedMinisters}}
+              @layout="grid"
+              @disabled={{@disabled}}
+              />
+              {{#if this.selectedCurrentMinisters}}
+              <AuHr/>
+              {{/if}}
+              <AuList
+                @divider={{true}}
+                as |Item|
+              >
+                {{#each this.selectedCurrentMinisters as |minister|}}
+                  <Item class="au-u-flex au-u-flex--vertical-center au-u-flex--between">
+                    <strong>{{minister.fullName}}</strong>
+                    <div class="au-u-flex au-u-flex--vertical-center au-u-flex--spaced-tiny">
+                      <AuRadio 
+                        @name="submitter" 
+                        @checked={{await (this.checkIfSubmitter minister)}} 
+                        @disabled={{@disabled}}
+                        {{on "click" (fn this.onChangeSubmitter minister)}}
+                      />
+                      <Auk::Label class="au-u-padding-bottom-none">{{t "submitter"}}</Auk::Label>
+                    </div>
+                  </Item>
+                {{/each}}
+              </AuList>
+          </Utils::LoadableContent>
         </Auk::Panel::Body>
       </Auk::Panel>
