tweak alert styles: send to vp

--- a/app/components/subcase-demo/approval-titles-panel/approval-titles-panel-view.hbs
+++ b/app/components/subcase-demo/approval-titles-panel/approval-titles-panel-view.hbs
@@ -12,9 +12,9 @@
   <div class="auk-u-mb-4 auk-u-mt-0">
     <AuAlert
       @title="Dit dossier is onvolledig en doorgestuurd naar het Vlaams parlement op 29/12/2023"
-      @skin="success"
       @icon="mail"
       @size="small"
+      class="au-c-alert--neutral"
     />
   </div>
   {{/if}}
@@ -178,11 +178,10 @@
       </div>
     </AuContent>
     <AuAlert
-      @title="Dit dossier mist nog:"
-      @skin="warning"
-      @icon="alert-triangle"
+      @title="We vonden deze niet terug:"
+      @skin="neutral"
       @size="small"
-      class="au-u-margin-bottom-none au-u-margin-top"
+      class="au-u-margin-bottom-none au-u-margin-top-small au-c-alert--neutral"
     >
       <AuContent>
         <ul>
