--- a/app/styles/prototype/_cases.scss
+++ b/app/styles/prototype/_cases.scss
@@ -189,3 +189,8 @@
     border-radius: 0;
   }
 }
+
+.au-c-alert--neutral {
+  border-color: var(--au-gray-200);
+  background-color: var(--au-gray-100);
+}
