KAS-4489 Replacement of specific print styling for vl-alert

--- a/app/styles/print/_general.scss
+++ b/app/styles/print/_general.scss
@@ -7,13 +7,6 @@
     font-size: 50%;
   }
 
-  /* Govflanders (VL) overrides
-   ========================================================================== */
-
-  .vl-alert {
-    display: none;
-  }
-
   /* VLC overrides
    ========================================================================== */
 
@@ -76,6 +69,10 @@
   }
 
   .au-c-toaster {
+    display: none;
+  }
+
+  .au-c-alert {
     display: none;
   }
 }
