--- a/app/components/cases/new-subcase-form.hbs
+++ b/app/components/cases/new-subcase-form.hbs
@@ -179,6 +179,7 @@
       <AuLink
         @skin="button-secondary"
         @route="cases.case.subcases"
+        @disabled={{this.saveCase.isRunning}}
       >
         {{t "cancel"}}
       </AuLink>
