--- a/app/templates/cases/case/subcases/add-subcase.hbs
+++ b/app/templates/cases/case/subcases/add-subcase.hbs
@@ -1,3 +1,1 @@
-<Cases::NewSubcaseForm
-        @decisionmakingFlow={{this.decisionmakingFlow}}
-/>
+<Cases::NewSubcaseForm @decisionmakingFlow={{this.decisionmakingFlow}} />
