KAS-4486 PR comments, fix sorting of selected ministers

--- a/app/components/cases/mandatee-selector-panel.hbs
+++ b/app/components/cases/mandatee-selector-panel.hbs
@@ -17,7 +17,7 @@
               @reserveSpace={{true}}
             >
               <Auk::CheckboxTree
-              @label='Alle ministers'
+              @label={{t "current-ministers"}}
               @items={{this.currentMinisters}}
               @itemStructure={{hash label="fullName"}}
               @selectedItems={{this.selectedCurrentMinisters}}
