--- a/app/components/cases/mandatee-selector-panel.hbs
+++ b/app/components/cases/mandatee-selector-panel.hbs
@@ -10,7 +10,7 @@
   </Auk::Panel::Header>
   <Auk::Panel::Body>
     {{#if this.areLoadingTasksRunning}}
-      <AuLoader />
+      <Auk::Loader />
     {{else}}
       <Auk::CheckboxTree
         @label={{t "current-ministers"}}
