KAS-4483 Add spacing to accesslevel pill element within printable version of agenda

--- a/app/components/agenda/printable-agenda/list-section/item-group/item/document.hbs
+++ b/app/components/agenda/printable-agenda/list-section/item-group/item/document.hbs
@@ -1,4 +1,6 @@
 <span>({{@piece.name}})</span>
 {{#if this.showAccessLevel}}
-  <AccessLevelPill @accessLevel={{@accessLevel}} />
+  <div class="auk-u-ml-2">
+    <AccessLevelPill @accessLevel={{@accessLevel}} />
+  </div>
 {{/if}}
