--- a/app/templates/cases/case/subcases/add-subcase.hbs
+++ b/app/templates/cases/case/subcases/add-subcase.hbs
@@ -1,4 +1,4 @@
-<Cases::NewSubcaseForm
+<Cases::Subcases::NewSubcaseForm
   @decisionmakingFlow={{this.decisionmakingFlow}}
   @latestSubcase={{this.latestSubcase}}
 />
