--- a/app/components/cases/subcases/new-subcase-form.hbs
+++ b/app/components/cases/subcases/new-subcase-form.hbs
@@ -23,7 +23,9 @@
                 @decisionmakingFlow.case.title
               }}
               @maxLength={{250}}
-            /> - {{t "create-subcase"}}
+            />
+            -
+            {{t "create-subcase"}}
           </h4>
         </div>
       </Auk::Toolbar::Item>
@@ -37,13 +39,7 @@
       <div class="au-o-layout">
         <Auk::Panel class="auk-u-mb-2">
           <Auk::Panel::Header @size="auto" class="au-u-background-gray-100">
-            <Auk::Toolbar @auto={{true}} as |Toolbar|>
-              <Toolbar.Group @position="left">
-                <h4 class="auk-toolbar__title">
-                  {{t "general-information"}}
-                </h4>
-              </Toolbar.Group>
-            </Auk::Toolbar>
+            <h4 class="auk-panel__title">{{t "general-information"}}</h4>
           </Auk::Panel::Header>
           <Auk::Panel::Body>
             <Utils::LoadableContent
@@ -78,8 +74,8 @@
                       <AuButton
                         @skin="secondary"
                         @icon="copy-paste"
-                        {{on "click" (perform this.saveCase true)}}
-                        @disabled={{this.saveCase.isRunning}}
+                        {{on "click" (perform this.createSubcase true)}}
+                        @disabled={{this.createSubcase.isRunning}}
                       >
                         {{t "clone-previous-subcase"}}
                       </AuButton>
@@ -148,7 +144,7 @@
                         @skin="naked"
                         @icon="pencil"
                         @hideText={{true}}
-                        {{on "click" this.toggleIsEditing}}
+                        {{on "click" (toggle "isEditing" this)}}
                       >
                         {{t "edit"}}
                       </AuButton>
@@ -162,7 +158,7 @@
                         @skin="naked"
                         @icon="x"
                         @hideText={{true}}
-                        {{on "click" this.toggleIsEditing}}
+                        {{on "click" (toggle "isEditing" this)}}
                       >
                         {{t "cancel"}}
                       </AuButton>
@@ -174,23 +170,23 @@
           </Auk::Panel::Body>
         </Auk::Panel>
         {{#unless this.areLoadingTasksRunning}}
-          <Cases::MandateeSelectorPanel
+          <Cases::Subcases::MandateeSelectorPanel
             @mandatees={{this.mandatees}}
             @submitter={{this.submitter}}
             @setSubmitter={{this.setSubmitter}}
             @setMandatees={{this.setMandatees}}
-            @disabled={{this.saveCase.isRunning}}
+            @disabled={{this.createSubcase.isRunning}}
           />
-          <Cases::GovernmentAreasPanel
+          <Cases::Subcases::GovernmentAreasPanel
             @selectedFields={{this.selectedGovernmentFields}}
             @onSelectFields={{this.selectField}}
             @onDeselectFields={{this.deselectField}}
             @selectedDomains={{this.selectedGovernmentDomains}}
             @onSelectDomains={{this.selectDomain}}
             @onDeselectDomains={{this.deselectDomain}}
-            @disabled={{this.saveCase.isRunning}}
+            @disabled={{this.createSubcase.isRunning}}
           />
-          <Cases::DocumentUploadPanel
+          <Cases::Subcases::DocumentUploadPanel
             @pieces={{this.pieces}}
             @addPiece={{this.addPiece}}
             @deletePiece={{this.deletePiece}}
@@ -204,14 +200,15 @@
       <AuLink
         @skin="button-secondary"
         @route="cases.case.subcases"
-        @disabled={{this.saveCase.isRunning}}
+        @disabled={{this.createSubcase.isRunning}}
+        {{on "click" this.deletePieces}}
       >
         {{t "cancel"}}
       </AuLink>
       <AuButton
         @skin="primary"
-        @disabled={{this.saveCase.isRunning}}
-        {{on "click" this.toggleAgendaModal}}
+        @disabled={{this.createSubcase.isRunning}}
+        {{on "click" (toggle "showProposableAgendaModal" this)}}
       >
         {{t "new-subcase"}}
       </AuButton>
@@ -219,26 +216,18 @@
   </AuToolbar>
 </div>
 
-{{#if this.showAgendaModal}} 
-<Cases::ProposeAgendaModal
-  @toggleAgendaModal={{this.toggleAgendaModal}}
-  @disabled={{this.saveCase.isRunning}}
-  @onConfirm={{this.saveCase}}
-/>
+{{#if this.showProposableAgendaModal}}
+  <Cases::ProposableAgendasModal
+    @onCancel={{toggle "showProposableAgendaModal" this}}
+    @onConfirm={{perform this.createSubcase}}
+  />
 {{/if}}
 
-{{#if this.saveCase.isRunning}}
-<Auk::Modal>
-  <Auk::Modal::Header @title={{t "save"}} @onClose={{this.toggleShowSaveConfirmModal}}/>
-  <Auk::Modal::Body>
-    <Auk::Loader 
-      @message={{t "save-in-progress"}}
-    />
-  </Auk::Modal::Body>
-  <Auk::Modal::Footer
-   @cancelDisabled="true"
-   @onCancel={{this.toggleShowSaveConfirmModal}}
-  >
-  </Auk::Modal::Footer>
-</Auk::Modal>
+{{#if this.createSubcase.isRunning}}
+  <Auk::Modal @size="medium">
+    <Auk::Modal::Header @title={{t "new-subcase"}} @closeable={{false}} />
+    <Auk::Modal::Body>
+      <Auk::Loader @message={{t "save-in-progress"}} />
+    </Auk::Modal::Body>
+  </Auk::Modal>
 {{/if}}
