KAS-4505: show mandatee fullDisplayName + mandatee start/end for admin/secretarie in subcase

--- a/app/components/mandatees/mandatees-panel/mandatees-panel-view.hbs
+++ b/app/components/mandatees/mandatees-panel/mandatees-panel-view.hbs
@@ -45,7 +45,11 @@
                     @size="small"
                   />
                   <span class="auk-u-mx-2">
-                    {{mandatee.person.fullName}}
+                    {{#if this.isAdminOrSecretarie}}
+                      <Mandatee::NameWithRange @mandatee={{mandatee}} />
+                    {{else}}
+                      {{mandatee.person.fullName}}
+                    {{/if}}
                   </span>
                 </div>
               </td>
