KAS-4488 improve and cleanup the new feature

--- a/app/components/cases/subcases/government-areas-panel.hbs
+++ b/app/components/cases/subcases/government-areas-panel.hbs
@@ -4,7 +4,7 @@
   </Auk::Panel::Header>
   <Utils::LoadableContent
     @isLoading={{this.areLoadingTasksRunning}}
-    @reserveSpace={{true}}
+    @reserveSpace={{false}}
   >
     <Auk::Panel::Body class="au-c-panel-grid">
       {{#each this.domainSelections as |domainSelection|}}
